# coco_bambu_processo_seletivo

./: README.md  pyproject.toml
coco_bambu_processo_seletivo/challenge_one/: documentation.md  modeling_and_implementation_strategy.md
coco_bambu_processo_seletivo/challenge_one/schemas/: erp_schema.py
coco_bambu_processo_seletivo/challenge_two/: readme.md
coco_bambu_processo_seletivo/schemas/: erp_schema.py
